--- a/calendar-backend/vercel.json
+++ b/calendar-backend/vercel.json
@@ -7,7 +7,7 @@
       {
         "src": "/(.*)",
         "headers": {
-          "Access-Control-Allow-Origin": "https://event-calendar-frontend-three.vercel.app",
+          "Access-Control-Allow-Origin": ["https://event-calendar-frontend-three.vercel.app", "http://localhost:5173"],
           "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
           "Access-Control-Allow-Headers": "Content-Type, Authorization",
           "Access-Control-Allow-Credentials": "true"
